8252543: add compilation ticks for mitigating against deadlock due to blocking JVMCI compilation